# UNEEX-2021-22

./: README.md
02_TerminalProject/: README.md  text.txt
03_Multifile/: Makefile  fun.c
03_Multifile_upgraded/: Makefile  prog.c
03_TerminalProject/: Makefile  Show.c
04_Text/: randomize.sh  test2.txt
05_Debugging/: Makefile  range.c  test1.out  test1.py  test2.out  test2.py
06_TracingFencing/: Makefile  move.c  protect.c  run_test.sh  source_backup.txt  test1.out  test10.out  test11.out  test2.out  test3.out  test4.out  test5.out  test6.out  test7.out  test8.out  test9.out
07_Environmental/: Makefile.am  README  configure.ac
07_Environmental/src/: rhasher.c
07_Environmental/test/: 1_md5.sh.in  1_sha1.sh.in  2.in  2_md5.sh.in  2_sha1.sh.in  Makefile.am  test.sh
08_Regexps/: Makefile.am  configure.ac
08_Regexps/src/: esub.c
08_Regexps/tests/: Makefile.am  bad_regex.sh  bad_subst.sh  bad_subst2.sh  mem.sh  test1.sh  test2.sh
09_Testing/: Makefile.am  configure.ac
09_Testing/src/: buf.c  buf.h
09_Testing/tests/: Makefile.am  tests.ts  tests_legacy.c
10_I18n/: Makefile.am  configure.ac
10_I18n/po/: Makefile.am  ru.po
10_I18n/src/: guess.c
10_I18n/switch_LANG/: README  ru.sh
11_Documenting/: Makefile.am  configure.ac
11_Documenting/docs/: Doxyfile.in  Makefile.am
11_Documenting/po/: Makefile.am  ru.po
11_Documenting/src/: argp_data.h  guess.c  roman.c  roman.h
12_PatchInstall/: Makefile.am  configure.ac
12_PatchInstall/po/: LINGUAS  POTFILES.in  ru.po
12_PatchInstall/src/: argp.c  guess.c
